# waypoint-gtk

./: .gitignore  API.md  ARCHITECTURE.md  BUGFIXES.md  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  FINAL_IMPROVEMENTS.md  LICENSE  Makefile  PERFORMANCE_TESTING.md  PHASE2_SUMMARY.md  PHASE3_COMPLETE.md  PHASE3_PLAN.md  PHASE3_SUMMARY.md  PHASE4_PROGRESS.md  PHASE4_SUMMARY.md  PHASE4_TESTING.md  PHASE5_COMPLETE.md  PHASE5_SUMMARY.md  PHASE6_COMPLETE.md  PHASE6_IMPLEMENTATION.md  PHASE6_SUMMARY.md  PHASE7_OPTION_A.md  PHASE7_OPTION_A_COMPLETE.md  PHASE7_OPTION_B.md  PHASE7_OPTION_B_COMPLETE.md  PHASE7_PROPOSAL.md  PROJECT_STATUS.md  README.md  SECURITY.md  SESSION_SUMMARY.md  SUBVOLUME_SUPPORT.md  UI_IMPROVEMENTS.md  VOID_LINUX_INTEGRATION.md  cleanup-phantom-snapshots.sh  setup.sh  test  (+1 more)
.cargo/: deny.toml
.github/workflows/: security.yml
data/: com.voidlinux.waypoint.desktop  com.voidlinux.waypoint.policy  schedules.toml  tech.geektoshi.waypoint.desktop  tech.geektoshi.waypoint.policy  waypoint-scheduler.conf
data/dbus-1/: com.voidlinux.waypoint.conf  com.voidlinux.waypoint.service  tech.geektoshi.waypoint.conf  tech.geektoshi.waypoint.service
docs/: API.md  ARCHITECTURE.md  CLI.md  COMPARISON_WITH_SNAPPER.md  FEATURES.md  PERFORMANCE_TESTING.md  RECOVERY.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md  USER_GUIDE.md
hooks/: waypoint-pre-upgrade.sh  waypoint.conf
services/waypoint-scheduler/: run
services/waypoint-scheduler/log/: run
system/polkit/: 50-waypoint-automated.rules  51-waypoint-desktop.rules
waypoint/: Cargo.toml
waypoint-common/: Cargo.toml
waypoint-common/src/: backup_config.rs  config.rs  exclude.rs  format.rs  lib.rs  quota.rs  retention.rs  schedules.rs  validation.rs
waypoint-helper/: Cargo.toml
waypoint-helper/src/: audit.rs  backup.rs  btrfs.rs  main.rs  packages.rs
waypoint-scheduler/: Cargo.toml
waypoint-scheduler/src/: main.rs
waypoint/src/: backup_manager.rs  btrfs.rs  cache.rs  dbus_client.rs  main.rs  mount_monitor.rs  packages.rs  performance.rs  retention.rs  signal_listener.rs  snapshot.rs  subvolume.rs  user_preferences.rs
waypoint/src/ui/: about_preferences.rs  analytics_dialog.rs  backup_dialog.rs  comparison_dialog.rs  comparison_view.rs  create_snapshot_dialog.rs  dialogs.rs  error_helpers.rs  exclude_preferences.rs  file_diff_dialog.rs  file_restore_dialog.rs  main_window_helpers.rs  mod.rs  notifications.rs  package_diff_dialog.rs  preferences.rs  preferences_window.rs  quota_preferences.rs  retention_editor_dialog.rs  schedule_card.rs  schedule_edit_dialog.rs  scheduler_dialog.rs  scheduler_dialog_old.rs  shortcuts_window.rs  snapshot_list.rs  snapshot_row.rs  statistics_dialog.rs  toolbar.rs  validation.rs
waypoint/src/ui/backup_dialog/: helpers.rs  mod.rs  types.rs
