[workspace]
members = [
    "waypoint",
    "waypoint-helper",
    "waypoint-common",
    "waypoint-scheduler",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["Letdown2491 168875499+Letdown2491@users.noreply.github.com"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
once_cell = "1.21"
fs2 = "0.4"
version-compare = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
