[package]
name = "waypoint-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared types and utilities for Waypoint"

[lib]
name = "waypoint_common"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
