[package]
name = "waypoint"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GTK snapshot and rollback tool for Void Linux"

[[bin]]
name = "waypoint"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

# GTK/GUI dependencies
gtk = { version = "0.9", package = "gtk4", features = ["v4_10"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
gio = "0.20"
glib = "0.20"
dirs = "5.0"
libc = "0.2"

# D-Bus for IPC with helper
zbus = { version = "4.0", default-features = false, features = ["blocking"] }
futures-executor = "0.3"

# Async utilities
async-channel = "2.0"

# Shared types
waypoint-common = { path = "../waypoint-common" }
