[package]
name = "waypoint"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GTK snapshot and rollback tool for Void Linux"

[[bin]]
name = "waypoint"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
log.workspace = true
once_cell.workspace = true
toml.workspace = true
env_logger = "0.11"
rayon = "1.10"

# GTK/GUI dependencies
gtk = { version = "0.9", package = "gtk4", features = ["v4_10"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
gio = "0.20"
glib = "0.20"
dirs = "5.0"
libc = "0.2"

# D-Bus for IPC with helper
zbus = { version = "4.0", default-features = false, features = ["blocking", "tokio"] }
futures-executor = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
async-channel = "2.1"
fs2.workspace = true

# Shared types
waypoint-common = { path = "../waypoint-common" }
